--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bcrypt
 streamlit==1.39.0
 pandas==2.2.3
 python-dotenv==1.0.1
@@ -7,3 +8,4 @@ streamlit-lottie==0.0.5
 requests==2.32.3
 nest_asyncio==1.6.0
 bcrypt==4.1.2
+
