--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+streamlit
+bcrypt
 bcrypt==4.1.2
 streamlit==1.39.0
 pandas==2.2.3
@@ -7,6 +9,7 @@ google-generativeai==0.8.3
 streamlit-lottie==0.0.5
 requests==2.32.3
 nest_asyncio==1.6.0
+
 
 
 
